# CherryAlgo-Framework

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
config/: settings_template.ini
data/: sample_market_data.csv
src/cherry_algo_framework/: __init__.py
src/cherry_algo_framework/core/: event.py
src/cherry_algo_framework/data_mgt/: __init__.py  data_handler.py  market_data_feed.py
src/cherry_algo_framework/utils/: config_loader.py  logging_setup.py
