[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cherry_algo_framework"
version = "0.2.0" # Reflecting "Cherry 2.0"
authors = [
    { name = "Arnaud Saint-Pierre", email = "arnaudsntpierre@gmail.com" },
]
description = "A Python framework for backtesting quantitative trading strategies with a PyTorch-powered dynamic risk engine."
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
keywords = ["algorithmic trading", "quantitative finance", "backtesting", "risk management", "pytorch", "momentum trading", "small-cap", "python"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Office/Business :: Financial :: Investment",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Operating System :: OS Independent",
]

dependencies = [
    "pandas>=1.5.0",
    "numpy>=1.23.0",
    "scipy>=1.9.0",
    "torch>=1.13.0",  
    "matplotlib>=3.6.0",
    "seaborn>=0.12.0",
    "plotly>=5.10.0",
    "Flask>=2.2.0",   # For webhook listener example
    "python-dotenv>=0.21.0",
    "pyyaml>=6.0",    # For loading structured strategy parameters
    "loguru>=0.6.0",
    "tqdm>=4.64.0",
    "requests>=2.28.0" # For potential data fetching
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "flake8>=5.0",
    "black>=22.10.0",
    "isort>=5.10.0",
    "mypy>=0.990",
    "jupyterlab>=3.5.0",
    "ipykernel", # For Jupyter to use the venv
    "ipywidgets", # For interactive notebook elements
    "nbformat", # For notebook handling
]
notebooks = [
    "jupyterlab>=3.5.0",
    "ipykernel",
    "ipywidgets",
    "nbformat",
]

[project.urls]
Homepage = "https://github.com/asaintpi/CherryAlgo-Framework"  
# Issues = "https://github.com/asaintpi/CherryAlgo-Framework/issues"
# Documentation = "https://github.com/asaintpi/CherryAlgo-Framework/tree/main/docs"

[tool.setuptools]
packages = ["cherry_algo_framework"] # Points to the main package in src
package_dir = {"" = "src"} # Specifies that packages are under the 'src' directory

[tool.black]
line-length = 88
target-version = ['py39', 'py310', 'py311']

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true  
 